name: imgup
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: anonymously upload an image to imgur from the commandline
description: anonymously upload an image to imgur from the commandline
category: commandline
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/imgup

library
  hs-source-dirs: lib
  exposed-modules:
      Imgup
  build-depends:
      base ==4.*
    , aeson
    , lens
    , bytestring
    , lens-aeson
    , Glob
    , directory
    , filepath
    , dotenv
    , text
    , wreq
  default-language: Haskell2010
  ghc-options: -Wall

executable imgup
  hs-source-dirs: executable
  main-is: Main.hs
  build-depends:
      base -any
    , imgup -any
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , imgup -any
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      ImgupSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
